model changes and spec changes to support more effiecent and safe code
