# go/api_tenants.go
@@ -31,9 +31,9 @@ func AddLordTenant(w http.ResponseWriter, r *http.Request) {
 	}
 	fmt.Fprintln(w, lordTenantCreateBody)
 	err := tenant.NewLordTenant(
-		"This is my awesome lord",
-		"com",
-		"subscripify-2",
+		lordTenantCreateBody.TenantAlias,
+		lordTenantCreateBody.TopLevelDomain,
+		lordTenantCreateBody.SecondaryDomain,
 		lordTenantCreateBody.Subdomain,
 		lordTenantCreateBody.InternalServicesConfig,
 		lordTenantCreateBody.SuperServicesConfig,
@@ -45,32 +45,18 @@ func AddLordTenant(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-func AddMainTenant(w http.ResponseWriter, r *http.Request) {
+func AddTenant(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
 	defer r.Body.Close()
 	dec := json.NewDecoder(r.Body)
-	var mainTenantCreateBody MainTenantCreateBody
+	var mainTenantCreateBody TenantCreateBody
 	if err := dec.Decode(&mainTenantCreateBody); err != nil {
 		log.Printf("error: bad JSON: %s", err)
 		http.Error(w, "bad json", http.StatusBadRequest)
 		return
 	}
 	fmt.Fprintln(w, mainTenantCreateBody)
-}
-
-func AddSuperTenant(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
-	w.WriteHeader(http.StatusOK)
-	defer r.Body.Close()
-	dec := json.NewDecoder(r.Body)
-	var superTenantCreateBody SuperTenantCreateBody
-	if err := dec.Decode(&superTenantCreateBody); err != nil {
-		log.Printf("error: bad JSON: %s", err)
-		http.Error(w, "bad json", http.StatusBadRequest)
-		return
-	}
-	fmt.Fprintln(w, superTenantCreateBody)
 }
 
 func DeleteTenant(w http.ResponseWriter, r *http.Request) {
