# go/model_extended_tenant_object.go
@@ -12,12 +12,14 @@ package tenantapi
 type ExtendedTenantObject struct {
 
 	TenantUUID string `json:"tenantUUID,omitempty"`
-	// The name of the organization at time of tenant creation and the alias used for searching by org name.
-	OrgName string `json:"orgName,omitempty"`
 	// The name prefix for the Kubernetes namespaces and cloud resources that make up this tenant.
 	KubeNamespace string `json:"kubeNamespace,omitempty"`
-	// The UUID of this tenant's owner tenant
+	// The UUID of this tenant's owner tenant. This value is equal to lordUUID for super tenants
 	LiegeUUID string `json:"liegeUUID,omitempty"`
+	// The UUID of this tenant's lord tenant
+	LordUUID string `json:"lordUUID,omitempty"`
 
 	CreateTimestamp string `json:"createTimestamp,omitempty"`
+
+	CreatedBy string `json:"createdBy,omitempty"`
 }
